--- a/meet-landing-page/css/reset.css
+++ b/meet-landing-page/css/reset.css
@@ -1,25 +1,30 @@
-/* Modern CSS Reset */
-*, *::before, *::after {
+/* Box sizing */
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-/* Remove default margin */
+/* Reset margins */
 body,
 h1,
 h2,
 h3,
 h4,
-p {
+h5,
+p,
+figure,
+picture {
   margin: 0;
 }
 
-/* Set core body defaults */
+/* Set up the body */
 body {
   min-height: 100vh;
-  text-rendering: optimizeSpeed;
   line-height: 1.5;
+  text-rendering: optimizeSpeed;
 }
 
 /* Make images easier to work with */
@@ -37,8 +42,12 @@ select {
   font: inherit;
 }
 
-/* Remove all animations and transitions for people that prefer not to see them */
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
   *,
   *::before,
   *::after {
