style(hero): 🎨 align hero image to the right for better layout

--- a/meet-landing-page/css/style.css
+++ b/meet-landing-page/css/style.css
@@ -35,6 +35,10 @@ nav img {
   margin-bottom: var(--space-1000);
 }
 
+.hero__image-right {
+  justify-self: end;
+}
+
 .hero__content {
   text-align: center;
   padding: 0 var(--space-200);
