--- a/meet-landing-page/css/style.css
+++ b/meet-landing-page/css/style.css
@@ -30,11 +30,10 @@ nav img {
 /* Hero section */
 .hero {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-areas: 
-    "content"
-    "left"
-    "right";
+    "left right"
+    "content content";
   gap: var(--space-300);
   margin-bottom: var(--space-1000);
 }
